infrastructure/kubernetes/applications/slackin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slackin
spec:
  # because of websocket connections and sessions, cannot be deployed HA
  replicas: 1
  selector:
    matchLabels:
      app: slackin
  template:
    metadata:
      labels:
        app: slackin
    spec:
      containers:
      - name: slackin
        image: unchain/slackin:slow
        resources:
          limits:
            memory: "32Mi"
            cpu: "100m"
        ports:
        - containerPort: 3000
          name: http
