infrastructure/kubernetes/applications/slackin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slackin
spec:
  selector:
    app: slackin
  ports:
  - port: 3000
    targetPort: http
